[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roboquant-stock-poc"
version = "0.1.0"
description = "KRX stock prediction and recommendation PoC with DuckDB, tabular models, and CLI reports."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "duckdb>=1.0",
  "pyyaml>=6.0",
  "pykrx>=1.0",
  "finance-datareader>=0.9",
  "scikit-learn>=1.4",
  "lightgbm>=4.3",
  "joblib>=1.3",
  "plotly>=5.20",
  "jinja2>=3.1",
  "streamlit>=1.35",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "feedparser>=6.0.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "httpx>=0.27",
]
gpu = [
  "torch>=2.3",
  "tqdm>=4.66",
]
global = [
  "yfinance>=0.2",
  "httpx>=0.27",
]
telegram = [
  "telethon>=1.36",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"app/*.py" = ["E402"]
